Updating about.html

--- a/about.html
+++ b/about.html
@@ -4,4 +4,4 @@ title: About
 header-img: "img/about-bg.png"
 ---
 
-<p></p>
+<p>My Name Is Bartholomew Fountain I was born July 19, 1985 in Macon, Georgia and live there till I was seven years ago, till my Mother decided to move away to Cochran, Georgia in Jun of 1994. I live in Cochran, Georgia till I  was twenty-eight year old and move back home to Macon, Georgia after my mother had pass away at the age of sixty year old on January 2013, after my mother past away I move back home to Macon, Georgia for awhile with my dad, doing time I stayed with my dad I was work for a Company call Academy Sports & Outdoors Distribution Center in Jeffersonville, GA for seven years now.</p>
